# ORECA

./: .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  REPRODUCE.md  cli.py  pyproject.toml  ruff.toml
anomaly_detections/: pyproject.toml
anomaly_detections/src/: spot.py
anomaly_detections/src/anomaly_detections/n-sigma/: kafka_client.py
anomaly_detections/src/anomaly_detections/spot/: Dockerfile  __init__.py  bi_d_spot.py  bi_spot.py  d_spot.py  flink_anomaly_detections_test.py  flink_anomaly_detections_test.yaml  spot.py  utils.py
anomaly_detections/tests/: bidspot_test.py  test.py
benchmark/: README.md  cli.py  pyproject.toml
benchmark/anomaly_detections/: Dockerfile  README.md  deployment.yaml
benchmark/anomaly_detections/src/anomaly_detections/n-sigma/: kafka_client.py
benchmark/anomaly_detections/src/anomaly_detections/spot/: bi_d_spot.py  d_spot.py  extreme_value.py  flink_anomaly_detections_test.py  spot_base.py  utils.py
benchmark/anomaly_detections/tests/: spot_test.py  test.py
benchmark/deployments/: README.md  pyproject.toml
benchmark/deployments/src/deployments/: config.py  config.yaml  paths.py  session.py
benchmark/deployments/src/deployments/applications/: application_manager.py  base.py  helm.py  kubectl.py
benchmark/deployments/src/deployments/observer/: log_api.py  metric_api.py  monitor_config.yaml  observe.py
benchmark/experiment/: README.md
benchmark/experiment/src/experiment/: experiment_config.py  experiment_config.yaml  resource_hog_config.yaml
benchmark/experiment/src/experiment/config/: anomaly_model.py  fault_config.py  network_fault.yaml  network_fault_config.py  resource_fault_config.py
benchmark/experiment/src/experiment/fault_controller/: base.py  (+1 more)
benchmark/experiment/tests/network_fault/: delay_config.yaml  loss_config.yaml  test_delay.py  test_loss.py
benchmark/experiment/tests/resource_fault/: cpu_config.yaml  io_config.yaml  test_cpu.py  test_io.py  test_memory.py
benchmark/experiment_controller/: README.md  pyproject.toml
benchmark/experiment_controller/docs/: application_cleanup_script.sh  example.py  example_rca_evaluator.py  monitor_config.yaml  observability_cleanup_script.sh
benchmark/experiment_controller/docs/config/: network_delay_preprocessing.yaml  network_loss_preprocessing.yaml  resource_cpu_preprocessing.yaml  resource_hog_memory_preprocessing.yaml  resource_memory_preprocessing.yaml
benchmark/experiment_controller/docs/ml_serving/: example.py  example_rca_evaluator.py  experiment_cadence.py  experiment_elasticity.py  experiment_severity.py  generate_config.py  observability_cleanup_script.sh
benchmark/experiment_controller/docs/train_ticket/: experiment.py  experiment_config_template.yaml.j2  full_experiment.py  generate_config.py  rca_evaluator.py
benchmark/experiment_controller/src/experiment_controller/: config_generator.py  experiment_config.py  experiment_config_template.yaml.j2  experiment_controller.py  logger.py  script_runner.py
benchmark/experiment_controller/tests/network_fault/: delay_config.yaml  loss_config.yaml  test_delay.py  test_loss.py
benchmark/experiment_controller/tests/observability_controller/: test_metric_controller.py
benchmark/experiment_controller/tests/rca_evaluator/: test_all.py
benchmark/experiment_controller/tests/resource_fault/: cpu_chaos.yaml  cpu_config.yaml  io_config.yaml  memory_chaos.yaml  memory_config.yaml  test_cpu.py  test_io.py  test_memory.py
benchmark/fault_injector/: pyproject.toml
benchmark/fault_injector/src/fault_injector/: base.py  experiment_config.py  experiment_config.yaml  inject_app.py  inject_os.py  inject_otel.py  inject_symp.py  inject_virtual.py  network.py
benchmark/helm_charts/: README.md  cilium_values.yml  install_helm.sh  observability_gateway.yml  prometheus_kafka_adapter.yaml  uninstall.sh  values.yml
benchmark/helm_charts/alloy/: values.yaml
benchmark/helm_charts/cilium/: README.md  cilium_values.yaml  values_cloud.yaml  values_edge.yaml
benchmark/helm_charts/flink/: anomaly-detection.yaml  install.sh
benchmark/helm_charts/grafana/: README.md  values.yaml
benchmark/helm_charts/jaeger/: values.yaml
benchmark/helm_charts/loki/: values.yaml
benchmark/helm_charts/longhorn/: gateway.yaml  values.yaml
benchmark/helm_charts/otel/: install.sh  otel_collector.yaml  otel_collector_config.yaml  test.yaml  values.yaml  values_cloud.yaml  values_edge.yaml
benchmark/helm_charts/prom_kafka_adapter/: node_adapter.yaml  pod_adapter.yaml  service_adapter.yaml
benchmark/helm_charts/prometheus/: README.md  anomaly_detection.yaml  test.yaml  values.yaml  values_cloud.yaml  values_edge.yaml
benchmark/helm_charts/prometheus/prometheus/: values.yaml
benchmark/helm_charts/redpanda/: gateway.yaml  redpanda-client.yaml  redpanda-cluster.yaml  topic.yaml
benchmark/helm_charts/scylla/: install.sh  uninstall.sh  values.manager.yaml  values.operator.yaml  values.scylla.yaml
benchmark/helm_charts/tempo/: values.yaml
benchmark/jaeger/: docker-compose.yml
benchmark/observer/: README.md  pyproject.toml
benchmark/observer/src/observer/: log_api.py  metric_api.py  monitor_config.yaml
benchmark/rca_methods/: Dockerfile  README.md  pyproject.toml
benchmark/rca_methods/jupyterhub/: Untitled-checkpoint.ipynb
benchmark/rca_methods/src/rca_methods/: __init__.py  baro.py  base_rca.py  causalai.py  causalrca.py  circa.py  cloudranger.py  config.yaml  dummy_rca.py  rca_factory.py  rca_service.py
benchmark/rca_methods/tests/: example_dependency_graph.yaml  test.py  test_baro.py  test_causalai.py  test_circa.py  test_dependency_graph.py  test_pc.py
benchmark/vm_monitoring/jaeger/: docker-compose.yml
deployments/observer/: __init__.py  log_api.py  metric_api.py  observe.py  pyproject.toml  trace_api.py
deployments/observer/filebeat/: README.md  values.yaml
deployments/observer/logstash/: README.md
deployments/observer/utils/: extract.py
src/rca_methods/: pyproject.toml
src/rca_methods/src/rca_methods/: __init__.py  baro.py  causalai.py  causalrca.py  circa.py  cloudranger.py
(+280 files in other folders)
