[project]
name = "anomaly_detections"
version = "0.1.0"
description = "Add your description here"
authors = [{ name = "nguu0123", email = "nguu0123@gmail.com" }]
dependencies = [
    "numpy",
    "pandas>=2.3.0",
    "scipy>=1.16.0",
    "matplotlib>=3.10.3",
    "apache-flink<2.0.0",
    "confluent-kafka>=2.11.0",
    "tabulate>=0.9.0",
]
readme = "README.md"
requires-python = "== 3.12.5"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = ["pytest>=8.4.1"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/anomaly_detections"]
