[project]
name = "rca-edge-cloud"
version = "0.1.0"
description = "Add your description here"
authors = [{ name = "nguu0123", email = "nguu0123@gmail.com" }]
dependencies = [
  "prompt-toolkit>=3.0.51",
  "loguru>=0.7.3",
  "locust>=2.36.1",
  "faker>=37.1.0",
  "pytest>=8.3.5",
  "rich>=14.0.0",
]
readme = "README.md"
requires-python = ">= 3.10"

[tool.rye]
managed = true
dev-dependencies = ["ruff>=0.9.9", "pre-commit>=4.1.0"]
virtual = true

[tool.hatch.metadata]
allow-direct-references = true


[tool.rye.workspace]
members = ["deployments", "rca_methods", "fault_injector", "observer"]

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 10

[tool.ruff.lint.pydocstyle]
convention = "pep257" # Accepts: "google", "numpy", or "pep257".

[tool.ruff.lint]
select = [
  "F",   # Pyflakes
  "E",   # Pycode styles
  "W",   # Pycode styles
  "N",   # Pep8 naming
  "I",   # Isort
  "UP",  # Pyupgrade
  "C4",  # Flake8 comprehension
  "ISC", # Flake8 implicit str concat
  "B",   # Flake8 bugbear
  "PGH", # Pygrep hook
  "RUF", # Ruff specific rules
]
ignore = [
  "E501",   # Line too long
  "RET504", # Unnecessary assignment
  "RET505", # Unnecessary else after return
  "C901",   # Too complex function
  "B904",   # raise-without-from-inside-except, enable when understand more
  "PLR",
  "ISC001",
]

[tool.rye.lint.pylint]
max-args = 10
