[project]
name = "rca-edge-cloud"
version = "0.1.0"
description = "Add your description here"
authors = [{ name = "nguu0123", email = "nguu0123@gmail.com" }]
dependencies = [
  "prompt-toolkit>=3.0.51",
  "loguru>=0.7.3",
  "locust>=2.36.1",
  "faker>=37.1.0",
  "pytest>=8.3.5",
  "rich>=14.0.0",
]
readme = "README.md"
requires-python = ">= 3.10"

[tool.rye]
managed = true
dev-dependencies = ["ruff>=0.9.9", "pre-commit>=4.1.0"]
virtual = true

[tool.hatch.metadata]
allow-direct-references = true


[tool.rye.workspace]
members = [
  "deployments",
  "rca_methods",
  "experiment_controller",
  "anomaly_detections",
]
