[project]
name = "rca-edge-cloud"
version = "0.1.0"
description = "Add your description here"
authors = [{ name = "nguu0123", email = "nguu0123@gmail.com" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "prompt-toolkit>=3.0.51",
  "loguru>=0.7.3",
  "pytest>=8.3.5",
  "rich>=14.0.0",
]

[tool.uv.workspace]
members = [
  "deployments",
  "rca_methods",
  "experiment_controller",
  "anomaly_detections",
]

[dependency-groups]
dev = ["ruff>=0.9.9", "pre-commit>=4.1.0"]
