[project]
name = "experiment_controller"
version = "0.1.0"
description = "Add your description here"
authors = [{ name = "nguu0123", email = "nguu0123@gmail.com" }]
dependencies = ["paramiko>=3.5.1", "pyyaml>=6.0.2", "pydantic>=2.11.7"]
readme = "README.md"
requires-python = ">= 3.10"

[project.optional-dependencies]
docs = [
    "kubernetes>=33.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/experiment_controller"]
