[project]
name = "experiment_controller"
version = "0.1.0"
description = "Add your description here"
authors = [{ name = "nguu0123", email = "nguu0123@gmail.com" }]
dependencies = [
  "paramiko>=3.5.1",
  "pyyaml>=6.0.2",
  "pydantic>=2.11.7",
  "tqdm>=4.66.4",
  "kubernetes>=33.1.0",
  "pandas>=2.3.3",
]
readme = "README.md"
requires-python = ">= 3.10"

[build-system]
requires = ["uv_build>=0.8.24,<0.9.0"]
build-backend = "uv_build"
