[project]
name = "rca-methods"
version = "0.1.0"
description = "Add your description here"
authors = [{ name = "nguu0123", email = "nguu0123@gmail.com" }]
dependencies = [
  "causal-learn>=XXX.XXX.XXX.XXX",
  "scikit-network>=0.33.1",
  "causalai @ git+https://github.com/salesforce/causalai.git",
  "torch>=2.6.0",
  "fastapi>=0.116.1",
  "loguru>=0.7.3",
  "requests>=2.32.4",
  # "kubernetes>=33.1.0",
  "pandas>=2.3.0",
  "psutil>=6.0.0",
]
readme = "README.md"
requires-python = ">= 3.10"

[project.optional-dependencies]
test = ["pytest>=8.4.1"]

[build-system]
requires = ["uv_build>=0.8.24,<0.9.0"]
build-backend = "uv_build"

[tool.uv]
package = true
