[project]
name = "observer"
version = "0.1.0"
description = "Add your description here"
authors = [{ name = "nguu0123", email = "nguu0123@gmail.com" }]
dependencies = [
  "pandas>=2.2.3",
  "requests>=2.32.3",
  "pytz>=2025.2",
  "kubernetes>=32.0.1",
  "prometheus-api-client>=0.5.7",
  "elasticsearch>=8.17.2",
]
readme = "README.md"
requires-python = ">= 3.10"

[tool.rye]
managed = true
virtual = true
