[project]
name = "rca-methods"
version = "0.1.0"
description = "Add your description here"
authors = [{ name = "nguu0123", email = "nguu0123@gmail.com" }]
dependencies = [
  "causal-learn>=XXX.XXX.XXX.XXX",
  "scikit-network>=0.33.1",
  "causalai @ git+https://github.com/salesforce/causalai.git",
  "torch>=2.6.0",
]
readme = "README.md"
requires-python = ">= 3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/rca_methods"]
